<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="match_parent" android:layout_height="wrap_content">

		<include layout="@layout/actionbar_common" />

		<TextView android:id="@+id/profilePage_TextView_profilePageTitle"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/profilePage_TextView_profilePageTitle" />

		<CheckBox android:id="@+id/profilePage_CheckBox_item1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/profilePage_CheckBox_item1" />
		<CheckBox android:id="@+id/profilePage_CheckBox_item2"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/profilePage_CheckBox_item2" />
		<CheckBox android:id="@+id/profilePage_CheckBox_item3"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/profilePage_CheckBox_item3" />
		<CheckBox android:id="@+id/profilePage_CheckBox_item4"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/profilePage_CheckBox_item4" />
	</LinearLayout>
</ScrollView>
