<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".RegisterPage"
                android:background="#fff">
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="408dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
    
            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="39dp"
                android:contentDescription="@string/logoImage_description"
                android:src="@drawable/openwords_logo_c_oranged_h_97" />
    
            <EditText
                android:id="@+id/registerPage_EditText_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ems="10"
                android:hint="@string/registerPage_EditText_username"
                android:inputType="text|textPersonName" >
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/registerPage_EditText_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerPage_EditText_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:ems="10"
                android:hint="@string/registerPage_EditText_password"
                android:inputType="text|textPassword" />

            <EditText
                android:id="@+id/registerPage_EditText_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/registerPage_EditText_username"
                android:layout_below="@+id/registerPage_EditText_password"
                android:layout_marginTop="23dp"
                android:ems="10"
                android:hint="@string/registerPage_EditText_password2"
                android:inputType="text|textPassword" />

            <Button
                android:id="@+id/registerPage_Button_registerSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerPage_EditText_password2"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_custom"
                android:layout_marginTop="20dp"
                android:text="@string/registerPage_Button_registerSubmit" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

